upgrade js libs
Signed-off-by: Julien Buret <jburet@voyages-sncf.com>

--- a/nlp/admin/web/src/app/sentence-analysis/highlight/highlight.component.css
+++ b/nlp/admin/web/src/app/sentence-analysis/highlight/highlight.component.css
@@ -15,10 +15,11 @@
  */
 
 .highlight {
-  width:80%;
-  margin-left: auto;
-  margin-right: auto;
-  margin-top:20px;
+  text-align:center;
+}
+.inner-highlight {
+  display:inline-block;
+  margin-bottom:10px;
 }
 
 .highlight-text {
