--- a/nlp/admin/web/src/app/archive/archive.component.html
+++ b/nlp/admin/web/src/app/archive/archive.component.html
@@ -15,6 +15,6 @@
   -->
 
 <div class="archive">
-  <tock-sentences-scroll [filter]="filter" title="Archive"></tock-sentences-scroll>
+  <tock-sentences-scroll [filter]="filter" title="Archive" [displayArchiveButton]="false"></tock-sentences-scroll>
 </div>
 
