ngx-infinite-scroll update
Signed-off-by: Julien Buret <jburet@voyages-sncf.com>

--- a/nlp/admin/web/src/app/applications/application/application.component.html
+++ b/nlp/admin/web/src/app/applications/application/application.component.html
@@ -21,7 +21,7 @@
   <md-card-content *ngIf="application">
     <div>
       <md-input-container>
-        <input mdInput placeholder="New Application name" [(ngModel)]="application.name" (keyup.enter)="saveApplication()">
+        <input mdInput placeholder="New application name" [(ngModel)]="application.name" (keyup.enter)="saveApplication()">
       </md-input-container>
     </div>
     <div *ngIf="state.locales">
