increase application select width
Signed-off-by: Julien Buret <jburet@voyages-sncf.com>

--- a/nlp/admin/web/src/app/app.component.html
+++ b/nlp/admin/web/src/app/app.component.html
@@ -42,7 +42,8 @@
 
     <md-select *ngIf="state.currentApplication"
                (change)="changeApplication($event.value)"
-               [ngModel]="state.currentApplication.name">
+               [ngModel]="state.currentApplication.name"
+               class="select-application">
       <md-option *ngFor="let app of state.applications"
                  [value]="app.name">{{ app.name }}</md-option>
     </md-select>
