resolves #3 - implements import/export facility
Signed-off-by: Julien Buret <jburet@voyages-sncf.com>

--- a/nlp/admin/web/src/app/applications/applications/applications.component.css
+++ b/nlp/admin/web/src/app/applications/applications/applications.component.css
@@ -14,13 +14,19 @@
  * limitations under the License.
  */
 
-.tock-name{
+.tock-name {
   padding-left: 20px;
 }
+
 .locales {
-  padding-right:10px;
-  padding-left:10px;
+  padding-right: 10px;
+  padding-left: 10px;
 }
+
 .select-action {
   background-color: aquamarine;
+}
+
+.action-spacing {
+  width: 10px;
 }
