--- a/nlp/admin/web/src/app/sentence-analysis/create-intent-dialog/create-intent-dialog.component.html
+++ b/nlp/admin/web/src/app/sentence-analysis/create-intent-dialog/create-intent-dialog.component.html
@@ -16,12 +16,14 @@
 
 <h1 md-dialog-title>Create a New Intent</h1>
 <div md-dialog-content>
-  <md-input-container>
-    <input mdInput placeholder="Intent Name"  [(ngModel)]="name">
-  </md-input-container>
+  <form #intentForm="ngForm">
+    <md-input-container>
+      <input mdInput required name="name" placeholder="Intent Name" [(ngModel)]="name">
+    </md-input-container>
+  </form>
 </div>
 <div md-dialog-actions>
   <button md-button (click)="dialogRef.close('cancel')">Cancel</button>
-  <button md-button (click)="save()">Create</button>
+  <button md-button (click)="save()" [disabled]="!intentForm.form.valid">Create</button>
 </div>
 
