use table for intents with many entities
Signed-off-by: Julien Buret <jburet@voyages-sncf.com>

--- a/nlp/admin/web/src/app/applications/application/application.component.html
+++ b/nlp/admin/web/src/app/applications/application/application.component.html
@@ -27,8 +27,11 @@
     </div>
     <div *ngIf="state.locales">
       <md-chip-list>
-        <md-chip *ngFor="let locale of application.supportedLocales" mdTooltip="Delete locale" selected="true"
-                 (click)="removeLocale(locale)" color="accent">
+        <md-chip *ngFor="let locale of application.supportedLocales"
+                 mdTooltip="Delete locale"
+                 [selected]="true"
+                 (click)="removeLocale(locale)"
+                 [color]="accent">
           {{state.localeName(locale)}}
         </md-chip>
       </md-chip-list>
