resolves #33 first dialog monitoring version
Signed-off-by: Julien Buret <jburet@voyages-sncf.com>

--- a/bot/admin/web/src/app/bot-admin-app.component.html
+++ b/bot/admin/web/src/app/bot-admin-app.component.html
@@ -27,6 +27,9 @@
       <md-list-item>
         <a routerLink="/nlp/inbox">NLP</a>
       </md-list-item>
+      <md-list-item>
+        <a routerLink="/monitoring/users">Monitoring</a>
+      </md-list-item>
     </md-list>
   </md-sidenav>
 
