resolves #7 first version of stats about users & dialogs
Signed-off-by: Julien Buret <jburet@voyages-sncf.com>

--- a/bot/admin/web/src/app/monitoring/users/user-timelines.component.html
+++ b/bot/admin/web/src/app/monitoring/users/user-timelines.component.html
@@ -22,7 +22,7 @@
       (scrolled)="onScroll()">
       <md-list>
         <md-list-item *ngFor="let user of users">
-          <img md-list-avatar src="/assets/images/people.png"
+          <img md-list-avatar src="{{user.userPreferences.picture ? user.userPreferences.picture : '/assets/images/people.png'}}"
                alt="{{user.userPreferences.firstName}} {{user.userPreferences.lastName}}">
           <h3 md-line> {{user.userPreferences.firstName}} {{user.userPreferences.lastName}}
             ({{user.userPreferences.locale}})</h3>
