small fixes on bot admin interfaces and add application name when available
Signed-off-by: Julien Buret <jburet@voyages-sncf.com>

--- a/bot/admin/web/src/app/shared/bot-message/sentence-element.component.html
+++ b/bot/admin/web/src/app/shared/bot-message/sentence-element.component.html
@@ -41,9 +41,9 @@
               ({{entry.value}}) <span class="text-category">({{entry.key}})</span>
             </td>
           </tr>
-          <tr *ngIf="element.choices.length !== 0">
+          <tr *ngIf="e.choices.length !== 0">
             <td>
-              <tock-bot-message-choice *ngFor="let c of element.choices" [choice]="c" [user]="user"></tock-bot-message-choice>
+              <tock-bot-message-choice *ngFor="let c of e.choices" [choice]="c" [user]="user"></tock-bot-message-choice>
             </td>
           </tr>
         </table>
