--- a/bot/admin/web/src/app/test/dialog/bot-dialog.component.html
+++ b/bot/admin/web/src/app/test/dialog/bot-dialog.component.html
@@ -40,7 +40,7 @@
             <td *ngIf="m.bot">
               &nbsp;
             </td>
-            <td *ngIf="!m.bot">
+            <td *ngIf="!m.bot" style="min-width: 200px">
               {{m.text}}
             </td>
             <td style="width:30px"></td>
