--- a/bot/admin/web/src/app/monitoring/users/user-timelines.component.html
+++ b/bot/admin/web/src/app/monitoring/users/user-timelines.component.html
@@ -16,54 +16,66 @@
 
 
 <div *ngIf="total !== -1">
-  <h1 *ngIf="total === 0">No user yet! <button md-button (click)="refresh()"><md-icon>refresh</md-icon></button></h1>
-  <h1 *ngIf="total !== 0"><span *ngIf="total > 10">Estimated</span> users : {{total}} <button md-button (click)="refresh()"><md-icon>refresh</md-icon></button></h1>
+  <h1 *ngIf="total === 0">No user yet!
+    <button md-button (click)="refresh()">
+      <md-icon>refresh</md-icon>
+    </button>
+  </h1>
+  <h1 *ngIf="total !== 0"><span *ngIf="total > 10">Estimated</span> users : {{total}}
+    <button md-button (click)="refresh()">
+      <md-icon>refresh</md-icon>
+    </button>
+  </h1>
   <p></p>
-<div
-  infinite-scroll
-  [infiniteScrollDistance]="2"
-  [infiniteScrollThrottle]="300"
-  (scrolled)="onScroll()">
   <div
-    *ngFor="let user of users">
-    <md-card>
-      <md-card-header>
-        <img md-card-avatar
-             src="{{user.userPreferences.picture ? user.userPreferences.picture : '/assets/images/people.png'}}"
-             alt="{{user.userPreferences.firstName}} {{user.userPreferences.lastName}}">
-        <md-card-title> {{user.userPreferences.firstName}} {{user.userPreferences.lastName}}
-          ({{user.userPreferences.locale}})
-        </md-card-title>
-        <md-card-subtitle>
-          <span class="lastUpdateDate"> created the {{user.userState.creationDate | amDateFormat: 'YYYY-MM-DD'}}-- updated {{user.lastUpdateDate | amTimeAgo}} </span>
-        </md-card-subtitle>
-      </md-card-header>
-      <md-card-content>
-        <span *ngIf="user.lastActionText" class="lastActionText"> &quot; {{user.lastActionText}} &quot;</span>
-        <button  *ngIf="!user.displayDialogs || !user.userDialog" md-icon-button md-tooltip="Display dialog" color="primary" (click)="loadDialog(user)">
-          <md-icon>forum</md-icon>
-        </button>
-        <button  *ngIf="user.displayDialogs && user.userDialog" md-icon-button md-tooltip="Hide dialog" color="accent" (click)="closeDialog(user)">
-          <md-icon>remove_from_queue</md-icon>
-        </button>
-      </md-card-content>
-    </md-card>
-    <md-card *ngIf="user.displayDialogs && user.userDialog">
-      <div *ngIf="user.userDialog.actions.length === 0">No dialog</div>
-      <table *ngIf="user.userDialog.actions.length !== 0">
-        <tr *ngFor="let action of user.userDialog.actions">
-          <td style="min-width:200px;"><span class="userAction" *ngIf="!action.isBot()" [md-tooltip]="action.date | amDateFormat: 'YYYY-MM-DD HH:mm:ss SSS'">
+    infinite-scroll
+    [infiniteScrollDistance]="2"
+    [infiniteScrollThrottle]="300"
+    (scrolled)="onScroll()">
+    <div
+      *ngFor="let user of users">
+      <md-card>
+        <md-card-header>
+          <img md-card-avatar
+               src="{{user.userPreferences.picture ? user.userPreferences.picture : '/assets/images/people.png'}}"
+               alt="{{user.userPreferences.firstName}} {{user.userPreferences.lastName}}">
+          <md-card-title> {{user.userPreferences.firstName}} {{user.userPreferences.lastName}}
+            <span *ngIf="user.applicationName">[{{user.applicationName}}]</span> ({{user.userPreferences.locale}})
+          </md-card-title>
+          <md-card-subtitle>
+            <span class="lastUpdateDate"> created the {{user.userState.creationDate | amDateFormat: 'YYYY-MM-DD'}} - updated {{user.lastUpdateDate | amTimeAgo}} </span>
+          </md-card-subtitle>
+        </md-card-header>
+        <md-card-content>
+          <span *ngIf="user.lastActionText" class="lastActionText"> &quot; {{user.lastActionText}} &quot;</span>
+          <button *ngIf="!user.displayDialogs || !user.userDialog" md-icon-button md-tooltip="Display dialog"
+                  color="primary" (click)="loadDialog(user)">
+            <md-icon>forum</md-icon>
+          </button>
+          <button *ngIf="user.displayDialogs && user.userDialog" md-icon-button md-tooltip="Hide dialog" color="accent"
+                  (click)="closeDialog(user)">
+            <md-icon>remove_from_queue</md-icon>
+          </button>
+        </md-card-content>
+      </md-card>
+      <md-card *ngIf="user.displayDialogs && user.userDialog">
+        <div *ngIf="user.userDialog.actions.length === 0">No dialog</div>
+        <table *ngIf="user.userDialog.actions.length !== 0">
+          <tr *ngFor="let action of user.userDialog.actions">
+            <td style="min-width:200px;"><span class="userAction" *ngIf="!action.isBot()"
+                                               [md-tooltip]="action.date | amDateFormat: 'YYYY-MM-DD HH:mm:ss SSS'">
             <tock-bot-message [message]="action.message" [user]="true"></tock-bot-message>
           </span>
-          </td>
-          <td><span class="botAction" *ngIf="action.isBot()" [md-tooltip]="action.date | amDateFormat: 'YYYY-MM-DD HH:mm:ss SSS'">
+            </td>
+            <td><span class="botAction" *ngIf="action.isBot()"
+                      [md-tooltip]="action.date | amDateFormat: 'YYYY-MM-DD HH:mm:ss SSS'">
             <tock-bot-message [message]="action.message"></tock-bot-message>
           </span>
-          </td>
-        </tr>
-      </table>
-    </md-card>
+            </td>
+          </tr>
+        </table>
+      </md-card>
+    </div>
   </div>
-</div>
 </div>
 
