resolves #15 Conversation replay UI for non-regression tests
Signed-off-by: Julien Buret <jburet@voyages-sncf.com>

--- a/bot/admin/web/src/app/monitoring/users/user-timelines.component.css
+++ b/bot/admin/web/src/app/monitoring/users/user-timelines.component.css
@@ -4,9 +4,9 @@
 .lastActionText {
   color:lightseagreen;
 }
-.userAction {
-  color:lightseagreen;
+
+
+.select-plan {
+  width: 200px;
 }
-.botAction {
-  color:brown;
-}
+
