--- a/bot/admin/web/src/app/test/dialog/bot-dialog.component.html
+++ b/bot/admin/web/src/app/test/dialog/bot-dialog.component.html
@@ -21,16 +21,16 @@
   </md-card-header>
   <md-card-content>
     <br>
-    <div *ngIf="configurations">
-      <div *ngIf="configurations.length===0">
+    <div>
+      <div *ngIf="(botConfiguration.configurations|async).length ===0">
         <h3>No bot configuration detected.</h3>
       </div>
-      <div *ngIf="configurations.length!==0">
+      <div *ngIf="(botConfiguration.configurations|async).length!==0">
         <md-select (change)="changeConfiguration($event.value)"
                    placeholder="Select a bot"
                    [ngModel]="currentConfigurationId"
                    class="select-configuration">
-          <md-option *ngFor="let conf of configurations"
+          <md-option *ngFor="let conf of (botConfiguration.configurations|async)"
                      [value]="conf._id">{{ conf.name }}
           </md-option>
         </md-select>
@@ -48,7 +48,7 @@
               <tock-bot-message [message]="m.message"></tock-bot-message>
             </td>
           </tr>
-           <tr *ngIf="loading">
+          <tr *ngIf="loading">
             <td colspan="3">
               <img src="/assets/images/loading.gif" width="40px" height="40px"/>
             </td>
