--- a/bot/admin/web/src/app/monitoring/users/user-timelines.component.html
+++ b/bot/admin/web/src/app/monitoring/users/user-timelines.component.html
@@ -40,7 +40,8 @@
                src="{{user.userPreferences.picture ? user.userPreferences.picture : '/assets/images/people.png'}}"
                alt="{{user.userPreferences.firstName}} {{user.userPreferences.lastName}}">
           <md-card-title> {{user.userPreferences.firstName}} {{user.userPreferences.lastName}}
-            <span *ngIf="user.botConfiguration">[{{user.botConfiguration.name}} - {{user.botConfiguration.connectorType.id}}]</span> ({{user.userPreferences.locale}})
+            <span *ngIf="user.botConfiguration">[{{user.botConfiguration.name}} - {{user.botConfiguration.connectorType.id}}]</span>
+            ({{user.userPreferences.locale}})
           </md-card-title>
           <md-card-subtitle>
             <span class="lastUpdateDate"> created the {{user.userState.creationDate | amDateFormat: 'YYYY-MM-DD'}} - updated {{user.lastUpdateDate | amTimeAgo}} </span>
@@ -58,23 +59,28 @@
           </button>
         </md-card-content>
       </md-card>
-      <md-card *ngIf="user.displayDialogs && user.userDialog">
+      <tock-display-dialog
+        *ngIf="user.displayDialogs && user.userDialog"
+        [dialog]="user.userDialog">
         <div *ngIf="user.userDialog.actions.length === 0">No dialog</div>
-        <table *ngIf="user.userDialog.actions.length !== 0">
-          <tr *ngFor="let action of user.userDialog.actions">
-            <td style="min-width:200px;"><span class="userAction" *ngIf="!action.isBot()"
-                                               [md-tooltip]="action.date | amDateFormat: 'YYYY-MM-DD HH:mm:ss SSS'">
-            <tock-bot-message [message]="action.message" [user]="true"></tock-bot-message>
-          </span>
-            </td>
-            <td><span class="botAction" *ngIf="action.isBot()"
-                      [md-tooltip]="action.date | amDateFormat: 'YYYY-MM-DD HH:mm:ss SSS'">
-            <tock-bot-message [message]="action.message"></tock-bot-message>
-          </span>
-            </td>
-          </tr>
-        </table>
-      </md-card>
+        <div *ngIf="user.userDialog.actions.length !== 0">
+          <div *ngIf="user.testPlans  && user.testPlans.length !== 0">
+            <md-select #selectedPlan
+                       placeholder="Select a Test Plan"
+                       class="select-plan">
+              <md-option *ngFor="let plan of user.testPlans"
+                         [value]="plan._id">{{ plan.name }}
+              </md-option>
+            </md-select>
+            <button (click)="addDialogToTestPlan(selectedPlan?.selected?.value, user.userDialog)"
+                    md-button color="primary">
+              <md-icon>add_shopping_cart</md-icon>
+              Add dialog to Test Plan
+            </button>
+          </div>
+        </div>
+          <p></p>
+      </tock-display-dialog>
     </div>
   </div>
 </div>
