improve test plan executions
Signed-off-by: Julien Buret <jburet@voyages-sncf.com>

--- a/bot/admin/web/src/app/test/plan/test-plan.component.css
+++ b/bot/admin/web/src/app/test/plan/test-plan.component.css
@@ -24,8 +24,17 @@
 
 .success {
   color:green;
+  height:auto;
+  vertical-align: middle;
 }
 
 .error {
   color:red;
+  height:auto;
+  vertical-align: middle;
 }
+
+.botAction {
+  color:brown;
+}
+
