ensure admin menu is visible
Signed-off-by: Julien Buret <jburet@voyages-sncf.com>

--- a/nlp/admin/web/src/app/applications/application-upload/application-upload.component.html
+++ b/nlp/admin/web/src/app/applications/application-upload/application-upload.component.html
@@ -30,7 +30,7 @@
         <input id="file" type="file" ng2FileSelect [uploader]="uploader"/>
       </p>
       <p>
-        Only new data will be imported. No existing data will be overrided.
+        Only new data will be imported. No existing data will be overridden.
       </p>
     </div>
     <div *ngIf="report">
