--- a/nlp/admin/web/src/app/applications/applications/applications.component.html
+++ b/nlp/admin/web/src/app/applications/applications/applications.component.html
@@ -16,8 +16,8 @@
 
 <md-card>
   <md-card-title>
-    <span *ngIf="state.applications.length === 0">Welcome! Please create your first Application</span>
-    <span *ngIf="state.applications.length !== 0">Applications</span>
+    <span *ngIf="state.applications.length === 0">Welcome! Please create your first NLP Application</span>
+    <span *ngIf="state.applications.length !== 0">NLP Applications</span>
   </md-card-title>
   <md-card-content>
     <span *ngIf="state.applications.length === 0">
